# InxaneUtils

./: .gitignore  CMakeLists.txt  InxaneUtilsTest  README.md
src/: InxaneUtils.hpp
src/InxaneUtils/: InxaneUtils.hpp
src/benchmarking/: basic_timer.h  duration.h  scope_timer.h  time_format.h  time_format_cast.h  time_function.h
src/data/: bst.hpp  linked_list.hpp  vote.hpp
src/file/: byte_file_reader.hpp  file.hpp
src/io/: .io.hpp.swp  input.hpp  io.hpp  print.hpp
src/math/: factorial.hpp  linear_space.hpp  math.hpp  quadratic.hpp
src/shell/: exec.hpp
src/string/: in_place.hpp
src/test/: main.cpp
src/vec/: vec.hpp
